# niftymind

./: .env.example  .gitignore  .replit  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  start.ps1
.claude/: launch.json  settings.local.json
.github/workflows/: apply-fixes-and-build.yml  build-apk-debug.yml  build-apk-release-fixed.yml  build-apk-release.yml
.omc/: notepad.md  project-memory.json
.omc/sessions/: 56bfc271-c82a-4a4f-b3c9-22b969ce37fb.json  81519a43-f467-4367-a808-5045ed7be573.json  98552d95-5711-4c36-abd6-93085832733c.json  b5d0fe21-d963-4838-979a-cb9c09b96952.json  e5029fea-9d86-4365-94ff-8b7cd7b41b7a.json
.omc/state/: agent-replay-b5d0fe21-d963-4838-979a-cb9c09b96952.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
artifacts/mobile/: .easignore  app.json  eas.json  metro.config.js  package.json  start_expo.bat
artifacts/mockup-sandbox/: vite.config.ts
backend/: .env.example  =2.0.0  config.py  docker-compose.yml  main.py  railway.toml  requirements.txt  setup_timescaledb.py  setup_timescaledb.sql  test_mock_trade.py  test_truedata_connection.py
backend/agents/: __init__.py  base_agent.py  btst_agent.py  consensus_orchestrator.py  db_logger.py  intraday_agent.py  llm_utils.py  macro_agent.py  news_agent.py  options_chain_agent.py  order_flow_agent.py  risk_manager.py  scalping_agent.py  sentiment_agent.py  strike_selector.py  technical_agent.py  volume_profile_agent.py
backend/api/: auth_middleware.py  rate_limiter.py  routes.py  secrets_manager.py  server.py  (+1 more)
(+124 files in other folders)
